<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Edit">

    <ImageView
        android:id="@+id/editing"
        android:layout_width="383dp"
        android:layout_height="270dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/imgedit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext"
        app:srcCompat="@drawable/voc2" />

    <TextView
        android:id="@+id/edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/choosen_image"
        android:textColor="#298A7C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/flipx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:onClick="flip"
        android:text="@string/flipx"
        android:textColor="#298A7C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/save"
        android:textColor="#298A7C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/flipx"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/flipy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:onClick="flip"
        android:text="@string/flipy"
        android:textColor="#298A7C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/flipx" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="32dp"
        android:text="@android:string/cancel"
        android:textColor="#298A7C"
        app:layout_constraintBottom_toTopOf="@+id/save"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="32dp"
        android:onClick="colorChange"
        android:text="@string/add_red"
        android:textColor="#C66767"
        app:layout_constraintBottom_toTopOf="@+id/flipx"
        app:layout_constraintStart_toEndOf="@+id/cancel" />

    <Button
        android:id="@+id/blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:onClick="colorChange"
        android:text="@string/add_blue"
        android:textColor="#DF3BAFBF"
        app:layout_constraintBottom_toTopOf="@+id/flipx"
        app:layout_constraintStart_toEndOf="@+id/red" />

    <Button
        android:id="@+id/yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:onClick="colorChange"
        android:text="@string/add_yellow"
        android:textColor="#D3AC22"
        app:layout_constraintBottom_toTopOf="@+id/flipy"
        app:layout_constraintStart_toEndOf="@+id/blue" />
</androidx.constraintlayout.widget.ConstraintLayout>