<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/open"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="showChoosen"
    tools:context=".MainActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_open" />

    <TextView
        android:id="@+id/title"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/gallery"
        android:textColor="#47BFAD"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/img2"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:contentDescription="@string/img2_name"
                    android:onClick="showChoosen"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/sari" />

                <ImageView
                    android:id="@+id/img1"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/img1_name"
                    android:onClick="showChoosen"
                    android:scaleType="centerCrop"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/miku1" />

                <TextView
                    android:id="@+id/name1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/img1_name"
                    android:textColor="#298A7C"
                    app:layout_constraintEnd_toEndOf="@+id/img1"
                    app:layout_constraintStart_toStartOf="@+id/img1"
                    app:layout_constraintTop_toBottomOf="@+id/img1" />

                <TextView
                    android:id="@+id/name2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/img2_name"
                    android:textColor="#298A7C"
                    app:layout_constraintEnd_toEndOf="@+id/img2"
                    app:layout_constraintStart_toStartOf="@+id/img2"
                    app:layout_constraintTop_toBottomOf="@+id/img2" />

                <ImageView
                    android:id="@+id/img3"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="32dp"
                    android:contentDescription="@string/img3_name"
                    android:onClick="showChoosen"
                    android:scaleType="centerCrop"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name1"
                    app:srcCompat="@drawable/miku2" />

                <TextView
                    android:id="@+id/name3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/img3_name"
                    android:textColor="#298A7C"
                    app:layout_constraintEnd_toEndOf="@+id/img3"
                    app:layout_constraintStart_toStartOf="@+id/img3"
                    app:layout_constraintTop_toBottomOf="@+id/img3" />

                <ImageView
                    android:id="@+id/img4"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:contentDescription="@string/img4_name"
                    android:onClick="showChoosen"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name2"
                    app:srcCompat="@drawable/miku3" />

                <TextView
                    android:id="@+id/name4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/img4_name"
                    android:textColor="#298A7C"
                    app:layout_constraintEnd_toEndOf="@+id/img4"
                    app:layout_constraintStart_toStartOf="@+id/img4"
                    app:layout_constraintTop_toBottomOf="@+id/img4" />

                <ImageView
                    android:id="@+id/img5"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="32dp"
                    android:contentDescription="@string/img5_name"
                    android:onClick="showChoosen"
                    android:scaleType="centerCrop"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name3"
                    app:srcCompat="@drawable/miku4" />

                <TextView
                    android:id="@+id/name5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/img5_name"
                    android:textColor="#298A7C"
                    app:layout_constraintEnd_toEndOf="@+id/img5"
                    app:layout_constraintStart_toStartOf="@+id/img5"
                    app:layout_constraintTop_toBottomOf="@+id/img5" />

                <ImageView
                    android:id="@+id/img6"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:contentDescription="@string/img6_name"
                    android:onClick="showChoosen"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name4"
                    app:srcCompat="@drawable/rella" />

                <TextView
                    android:id="@+id/name6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/img6_name"
                    android:textColor="#298A7C"
                    app:layout_constraintEnd_toEndOf="@+id/img6"
                    app:layout_constraintStart_toStartOf="@+id/img6"
                    app:layout_constraintTop_toBottomOf="@+id/img6" />

                <ImageView
                    android:id="@+id/img7"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="32dp"
                    android:contentDescription="@string/img7_name"
                    android:onClick="showChoosen"
                    android:scaleType="centerCrop"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name5"
                    app:srcCompat="@drawable/voc1" />

                <TextView
                    android:id="@+id/name7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/img7_name"
                    android:textColor="#298A7C"
                    app:layout_constraintEnd_toEndOf="@+id/img7"
                    app:layout_constraintStart_toStartOf="@+id/img7"
                    app:layout_constraintTop_toBottomOf="@+id/img7" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>